<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_drawer_button_title_home"/>
        <item android:id="@+id/nav_editProfile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_drawer_button_title_edit_profile"/>
        <item android:id="@+id/nav_reviewHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_drawer_button_title_history"/>
    </group>

    <item android:id="@+id/nav_logout"
        android:title="@string/nav_drawer_button_title_logout"/>
</menu>