<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/recycler_background"
    android:gravity="center"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                style="@style/CustomChip"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/cuisineTyoe1"
                android:textAlignment="center"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/CustomChip"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/cuisineTyoe2"
                android:textAlignment="center"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/CustomChip"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/cuisineTyoe3"
                android:textAlignment="center"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/CustomChip"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/cuisineTyoe4"
                android:textAlignment="center"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                style="@style/CustomChip"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/cuisineTyoe5"
                android:textAlignment="center"
                android:textSize="15sp" />
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ResList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />
</LinearLayout>