<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/restaurant_details_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ratingTxt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RatingBar
        android:id="@+id/overallRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/red"
        android:rating="4"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/ratingTxt2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RatingBar
        android:id="@+id/foodRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/red"
        android:rating="4.5"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintStart_toStartOf="@+id/overallRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/overallRatingBar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/ratingTxt3"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <RatingBar
        android:id="@+id/environmentRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/red"
        android:rating="3"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintStart_toStartOf="@+id/foodRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/foodRatingBar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/ratingTxt4"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RatingBar
        android:id="@+id/attitudeRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/red"
        android:rating="5"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintStart_toStartOf="@+id/environmentRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/environmentRatingBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reviewFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:onClick="reviewButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_write" />


    <TextView
        android:id="@+id/restaurantDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/golden_corral_des"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/attitudeRatingBar"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>