<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/formBg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <AutoCompleteTextView
            android:id="@+id/find_restaurant_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="Find Restaurant"
            android:completionThreshold="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


    <TextView
        android:id="@+id/ratingtxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ratingTxt2"
        app:layout_constraintStart_toStartOf="@+id/find_restaurant_input"
        app:layout_constraintTop_toBottomOf="@+id/find_restaurant_input" />

    <RatingBar
        android:id="@+id/foodRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/ratingtxt2"
        app:layout_constraintTop_toBottomOf="@+id/find_restaurant_input" />

    <TextView
        android:id="@+id/ratingtxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/ratingTxt3"
        app:layout_constraintStart_toStartOf="@+id/ratingtxt2"
        app:layout_constraintTop_toBottomOf="@+id/ratingtxt2" />

    <RatingBar
        android:id="@+id/environmentRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/foodRating"
        app:layout_constraintTop_toBottomOf="@+id/foodRating" />

    <TextView
        android:id="@+id/ratingtxt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ratingTxt4"
        app:layout_constraintStart_toStartOf="@+id/ratingtxt3"
        app:layout_constraintTop_toBottomOf="@+id/ratingtxt3" />

    <RatingBar
        android:id="@+id/attitudeRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/environmentRating"
        app:layout_constraintTop_toBottomOf="@+id/environmentRating" />

    <LinearLayout
        android:id="@+id/spinnerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attitudeRating">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="Background color" />

        <Spinner
            android:id="@+id/bgSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="354dp" />

    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/review_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Review"
            android:minHeight="200dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="reviewButtonClicked"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:gravity="center|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_input">

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"/>

        <Button
            android:id="@+id/imageUploadButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Upload Image"
            android:onClick="uploadImage"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>